# hust-pa

./: .gitignore  README.md  init.sh
nanos-lite/include/: common.h  debug.h  device.h  fs.h  loader.h  memory.h  proc.h  ramdisk.h
nanos-lite/report/: pa3.1.md  pa3.2.md
nanos-lite/src/: device.c  fs.c  irq.c  loader.c  main.c  mm.c  proc.c  ramdisk.c  syscall.c
navy-apps/: Makefile.compile
navy-apps/tests/dummy/: dummy.c
navy-apps/tests/events/: events.c
navy-apps/tests/hello/: hello.c
navy-apps/tests/text/: text.c
nemu/: .gitignore  CMakeLists.txt  Makefile  Makefile.git  cmake_gen.py  inspect.sh  runall.sh  trim.py
nemu/include/: common.h  debug.h  macro.h  nemu.h
nemu/include/cpu/: arith.h  cc.h  decode.h  eflags.h  exec.h  intr.h  jit.h  reg.h  relop.h  rtl-wrapper.h  (+1 more)
nemu/report/: SUMMARY.md  pa0.md  pa1.1.md  pa1.2.md  pa1.3.md  pa1.md  pa2.1.md  pa2.2.md  pa2.md  tt.s
nemu/src/: CMakeLists.txt
nemu/src/cpu/: CMakeLists.txt  intr.cpp  reg.cpp
nemu/src/cpu/decode/: CMakeLists.txt  decode.cpp  modrm.cpp
nemu/src/cpu/exec/: CMakeLists.txt  all-instr.h  arith.cpp  cc.cpp  control.cpp  data-mov.cpp  exec.c  exec.cpp  logic.cpp  prefix.cpp  relop.cpp  special.cpp  system.cpp
nemu/src/device/: CMakeLists.txt  device.cpp  keyboard.cpp  serial.cpp  timer.cpp  vga.cpp
nemu/src/device/io/: CMakeLists.txt  mmio.cpp  port-io.cpp
nemu/src/jit/: CMakeLists.txt  jit_rtl.cpp  jit_rtl.h  jit_rtl_arth.cpp  jit_rtl_memory.cpp  kjit.h  workflow.h
nemu/src/memory/: CMakeLists.txt  memory.cpp
nemu/src/misc/: CMakeLists.txt
nemu/src/monitor/: CMakeLists.txt  cpu-exec.cpp  monitor.cpp
nemu/src/monitor/debugg/: CMakeLists.txt  expr.cpp  ui.cpp  watchpoint.cpp
nemu/src/monitor/diff-test/: CMakeLists.txt  diff-test.cpp  diff-test.h  ref.cpp
nexus-am/: Makefile.compile
nexus-am/am/: am.h  amdev.h  amtrace.h  eflags.h
(+1511 files in other folders)
