add_executable(main "main.cpp")
add_subdirectory("monitor")
add_subdirectory("cpu")
add_subdirectory("misc")
add_subdirectory("device")
add_subdirectory("memory")
target_link_libraries(main "monitor" "debugg" "cpu" "misc" "device" "exec" "memory" "diff-test" "decode" "io")
target_link_libraries(main readline SDL2 dl)
