add_executable(main "main.cpp")
add_subdirectory("monitor")
add_subdirectory("jit")
add_subdirectory("device")
add_subdirectory("misc")
add_subdirectory("memory")
add_subdirectory("cpu")
target_link_libraries(main "monitor" "jit" "debugg" "decode" "io" "device" "misc" "cpu" "memory" "exec" "diff-test")
target_link_libraries(main readline SDL2 dl)
